kubernetes/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: backend-ingress
  namespace: devops-command-center

  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend
            port:
              number: 8000
